<!--suppress AndroidDomInspection -->
<resources>

    <!-- Main activity -->
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcomeText">Welcome To ALC 4.0</string>
    <string name="aboutAlc">ABOUT ALC</string>
    <string name="myProfile">MY PROFILE</string>

    <!-- About activity -->
    <string name="title_activity_about_alc">About ALC</string>

    <!-- Profile activity -->
    <string name="title_activity_my_profile">My Profile</string>
    <string name="name_activity_my_profile">Allan Musira</string>
    <string name="text_track">Track:</string>
    <string name="text_track_name">Android</string>
    <string name="text_country">Country:</string>
    <string name="text_country_name">Kenya</string>
    <string name="text_email">Email:</string>
    <string name="text_email_address">musiraallan@gmail.com</string>
    <string name="text_phone">Phone Number:</string>
    <string name="text_phone_number">+254720243046</string>
    <string name="text_slack_username">Slack Username:</string>
    <string name="text_slack_name">@musiracodes</string>

</resources>
